Fix hound spacing issue

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -17,7 +17,5 @@ $error_color: #EE1133;
   color: $error_color;
 }
 
-a.resource-tag-button {
-  color: white !important;
-}
-.tag-font-size{ font-size: 0.8em; }
+a.resource-tag-button { color: white !important; }
+.tag-font-size { font-size: 0.8em; }
